# BatchMate

./: .gitignore  README.md  pyproject.toml  requirements.txt
batchmate/: __init__.py  batchmate.py
batchmate/tmonitor/: __init__.py  tmonitor.py
batchmate/tmonitor/widgets/: __init__.py  log_panel.py  log_table.py  progress_window.py  sys_panel.py
batchmate/utils/: __init__.py  commons.py  stop_loss.py  tui.py
examples/: mnist-og.py  mnist.py
wandb/: latest-run
wandb/run-20240823_195009-xugu8qf2/: run-xugu8qf2.wandb
wandb/run-20240823_195009-xugu8qf2/files/: config.yaml  requirements.txt  wandb-metadata.json  wandb-summary.json
